# streamlens

./: .gitignore  README.md
client/: index.html  package-lock.json  package.json  requirements.md  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
client/src/: App.tsx  index.css
client/src/components/: AiChatPanel.tsx  CreateClusterDialog.tsx  EditClusterDialog.tsx  StreamsEdge.tsx  ThemeToggle.tsx  TopologyNode.tsx
client/src/hooks/: use-kafka.ts  use-theme.ts
client/src/lib/: api.ts
client/src/pages/: Dashboard.tsx  Topology.tsx
docs/: AI_SETUP.md  TOPOLOGY.md
resources/: cleanup.sh  create_data.sh  register_schemas_simple.sh
server/: .env.dev  README.md  configure_jmx.py  db.py  debug_consumer_groups.py  explore_jmx_clients.py  main.py  pyproject.toml  storage.py  test_list_groups.py
server/data/: clusters.json
server/debug/: README.md  check_producer_detection.py  configure_jmx.py  debug_jmx_structure.py  debug_kafka_connection.py  debug_member_details.py  test_connector_masking.py  test_connectors.py  test_jmx_connection.py  test_topic_config.py
server/kafka_topology_server.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
server/lib/: __init__.py  ai.py  codegen.py  kafka.py  topology.py
server/tests/: README.md  test_consumer_query.py  test_jmx.py
