[project]
name = "kafka-topology-server"
version = "1.0.0"
description = "Kafka topology view API backend"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "confluent-kafka>=2.3.0",
    "httpx>=0.27.0",
    "jmxquery>=0.6.0",
    "pyyaml>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
]
postgres = [
    "psycopg2-binary>=2.9.0",
]
gemini = [
    "google-generativeai>=0.8.0",
]
anthropic = [
    "anthropic>=0.22.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["main", "storage"]

[tool.setuptools.packages.find]
where = ["."]
include = ["lib*"]
